# DREAM3D

./: CMakeLists.txt
Documentation/Filters/: Generated_FilterDocs.qrc
Documentation/Filters/CustomFilters/: MergeTwinsForStats.html
Source/DREAM3DLib/: CMakeLists.txt  DREAM3DLibMacros.cmake
Source/DREAM3DLib/CustomFilters/: CropVolumePipeline.cpp  Crop_Volume_Pipeline.cpp  MergeTwinsForStats.cpp  MergeTwinsForStats.h  SourceList.cmake
Source/DREAM3DLib/GenericFilters/: FindSurfaceGrains.cpp  RenameCellArray.cpp
Source/DREAM3DLib/IOFilters/: EbsdToH5Ebsd.h
Source/DREAM3DLib/ProcessingFilters/: MinNeighbors.cpp
Source/DREAM3DLib/ReconstructionFilters/: MergeTwins.cpp  SegmentGrains.cpp
Source/DREAM3DLib/StatisticsFilters/: FindEuclideanDistMap.h  FindShapes.cpp  FindShapes.h
Source/DREAM3DLib/SyntheticBuildingFilters/: AddBadData.h
Source/EbsdLib/: CMakeLists.txt
Source/EbsdLib/Bruker/: BrukerFields.cpp  BrukerFields.h  SourceList.cmake
Source/FilterWidgets/: CMakeLists.txt
Source/OrientationLib/Texture/: StatsGen.hpp
Source/PipelineBuilder/: PipelineTreeWidget.cpp  PipelineTreeWidget.h
Source/Plugins/ImageImportPlugin/: CMakeLists.txt
Source/Plugins/OrientationAnalysis/Documentation/OrientationAnalysisFilters/: GenerateQuaternionConjugate.md
Source/Plugins/Statistics/Documentation/StatisticsFilters/: FindGroupingDensity.md
Source/Plugins/Statistics/StatisticsFilters/: FindGroupingDensity.cpp  FindGroupingDensity.h  SourceList.cmake
Source/Plugins/StatsGenerator/: StatsGeneratorConstants.h
Source/Plugins/StatsGenerator/Widgets/: PrecipitatePhaseWidget.cpp  PrimaryPhaseWidget.cpp  SourceList.cmake  StatsGenFeatureSizeWidget.cpp  StatsGenFeatureSizeWidget.h  StatsGenPlotWidget.cpp  StatsGenPlotWidget.h
Source/Plugins/StatsGenerator/Widgets/Delegates/: SGParetoItemDelegate.cpp  SGParetoItemDelegate.h
Source/Plugins/StatsGenerator/Widgets/TableModels/: SGParetoTableModel.cpp  SGParetoTableModel.h
Source/Plugins/StatsGenerator/Widgets/UI_Files/: StatsGenFeatureSizeWidget.ui
Source/Plugins/SyntheticBuilding/SyntheticBuildingFilters/: InitializeSyntheticVolume.cpp  PackPrimaryPhases.cpp
Source/QProxyFilterLib/: CMakeLists.txt  QFilterProxy_Template.h.in  QProxyFilterCodeGen.cpp  QProxyFilterLib.h
Tools/: QtFilterTest.cpp
Tools/QtFilterTest/: QtFilter.cpp  QtFilter.h
